2013-07-23  David S. Miller  <davem@davemloft.net>

	* tst-cancel4.c (WRITE_BUFFER_SIZE): Adjust comment.

2013-07-22  David S. Miller  <davem@davemloft.net>

	* tst-cancel4.c (WRITE_BUFFER_SIZE): Increase to 16384.

2013-07-19  Dominik Vogt  <vogt@de.ibm.com>

	* pthread_mutex_lock.c: Fix whitespace.
	* pthread_mutex_trylock.c: Likewise.
	* sysdeps/unix/sysv/linux/x86/bits/pthreadtypes.h: Likewise.
	* sysdeps/unix/sysv/linux/x86/elision-conf.c: Likewise.
	* sysdeps/unix/sysv/linux/x86/elision-conf.h: Likewise.
	* sysdeps/unix/sysv/linux/x86/elision-lock.c: Likewise.
	* sysdeps/unix/sysv/linux/x86/elision-timed.c: Likewise.
	* sysdeps/unix/sysv/linux/x86/elision-trylock.c: Likewise.
	* sysdeps/unix/sysv/linux/x86/force-elision.h: Likewise.
	* sysdeps/unix/sysv/linux/x86/hle.h: Likewise.
	* sysdeps/unix/sysv/linux/x86/pthread_mutex_cond_lock.c: Likewise.
	* sysdeps/unix/sysv/linux/x86/pthread_mutex_lock.c: Likewise.
	* sysdeps/unix/sysv/linux/x86/pthread_mutex_timedlock.c: Likewise.
	* sysdeps/unix/sysv/linux/x86/pthread_mutex_trylock.c: Likewise.

	* sysdeps/unix/sysv/linux/x86/elision-conf.c:
	Remove __rwlock_rtm_enabled and __rwlock_rtm_read_retries.
	(elision_init): Don't set __rwlock_rtm_enabled.
	* sysdeps/unix/sysv/linux/x86/elision-conf.h:
	Remove __rwlock_rtm_enabled.

2013-07-03  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/unix/sysv/linux/x86/init-arch.c: New file.
	* sysdeps/unix/sysv/linux/x86/init-arch.h: Likewise.

2013-07-02  Andi Kleen <ak@linux.intel.com>

	* sysdeps/unix/sysv/linux/x86/elision-conf.c (elision_init):
	  Check ENABLE_LOCK_ELISION.

2013-07-02  Andi Kleen  <ak@linux.intel.com>

	* pthread_mutexattr_settype.c (__pthread_mutexattr_settype):
	  Disable elision for PTHREAD_MUTEX_DEFAULT.

2013-07-02  Andi Kleen  <ak@linux.intel.com>
	    Hongjiu Lu  <hongjiu.lu@intel.com>

	* pthread_mutex_lock.c
	(__pthread_mutex_lock): Add lock elision support.
	* pthread_mutex_timedlock.c (pthread_mutex_timedlock): Likewise.